# looma

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_RELEASE.md  IDENTITY_REPORT.md  IMPLEMENTATION_NOTES.md  INSTALL_VERIFICATION.md  LAUNCH_TWEET.md  LICENSE  LOOMA_PRODUCT_FIT_REPORT.md  LOOMA_V1_5_REPORT.md  LOOMA_V1_REPORT.md  LOOMA_V2_READINESS.md  LOOMA_V2_REPORT.md  LOOMA_V2_STRATEGY.md  PUBLISH.md  README.md  REAL_WORLD_EVALUATION.md  RELEASE_ALPHA.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SAMPLE_OUTPUT.md  V1_5_READINESS.md  V1_READINESS.md  pyproject.toml
docs/demo/: README.md  demo_script.sh
docs/screenshots/: README.md
looma/: __init__.py  cli.py  confidence.py  config.py  db.py  doctor.py  explain.py  gitutil.py  health.py  identity.py  mcp.py  models.py  pack.py  pipeline.py  sanitize.py  util.py  weekly.py
looma/adapters/: base.py  claude.py  cursor.py
looma/benchmark/: harness.py
looma/extraction/: candidates.py  deterministic.py  extractor.py
looma/promotion/: promote.py
looma/resolution/: workitems.py
looma/retrieval/: ask.py  match.py  resume.py
looma/storage/: sqlite_store.py  vector_store.py
tests/: helpers.py  test_adapters.py  test_benchmark.py  test_cli.py  test_confidence.py  test_deterministic_rootless.py  test_explain.py  test_extraction_quality.py  test_hardening.py  test_ingest_idempotent.py  test_ingest_options.py  test_malformed_jsonl.py  test_mcp.py  test_pack.py  test_project_identity.py  test_promotion.py  test_reconcile.py  test_resume_ambiguous.py  test_sha_cache.py  test_weekly.py  test_workitem_creation.py
